--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -99,12 +99,25 @@ services:
       VITE_API_URL: http://localhost:3000/api
       VITE_APP_NAME: e-Tally Admin
     ports:
-      - '3001:3001'
+      - '3001:80'
     networks:
       - etally-network
     depends_on:
       - backend
     restart: unless-stopped
+    healthcheck:
+      test:
+        [
+          'CMD',
+          'wget',
+          '--quiet',
+          '--tries=1',
+          '--spider',
+          'http://localhost/health',
+        ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   # Nginx Reverse Proxy
   nginx:
