--- a/package.json
+++ b/package.json
@@ -42,5 +42,10 @@
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "dependencies": {
+    "csv-parser": "^3.2.0",
+    "csv-writer": "^1.6.0",
+    "pdf-parse": "^1.1.1"
   }
 }
