--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -5,6 +5,9 @@ events {
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
+    
+    # Client body size limit for large file uploads
+    client_max_body_size 100M;
 
     # Logging
     access_log /var/log/nginx/access.log;
@@ -32,6 +35,9 @@ http {
         server_name localhost;
         root /var/www/html;
         index index.html;
+        
+        # Client body size limit for large file uploads
+        client_max_body_size 100M;
 
         # Proxy API requests to backend
         location /api/ {
@@ -40,6 +46,11 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Timeout settings for long-running operations
+            proxy_connect_timeout 30s;
+            proxy_send_timeout 1800s;  # 30 minutes
+            proxy_read_timeout 1800s;  # 30 minutes
         }
 
         # Handle client-side routing
