--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,19 +5,20 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "vue": "^3.4.0",
-    "vue-router": "^4.2.5",
-    "pinia": "^2.1.7",
+    "@vueuse/core": "^10.7.0",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "bootstrap-vue-next": "^0.15.0",
-    "@vueuse/core": "^10.7.0",
+    "pdfjs-dist": "^5.4.149",
+    "pinia": "^2.1.7",
+    "vue": "^3.4.0",
+    "vue-router": "^4.2.5",
     "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
