--- a/nginx.conf
+++ b/nginx.conf
@@ -3,6 +3,13 @@ events {
 }
 
 http {
+    # Client body size limit for large file uploads
+    client_max_body_size 100M;
+    
+    # Include additional configurations
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+    
     upstream backend {
         server backend:3000;
     }
@@ -24,6 +31,9 @@ http {
     server {
         listen 80;
         server_name localhost;
+        
+        # Client body size limit for large file uploads
+        client_max_body_size 100M;
 
         # Health check endpoint
         location /health {
@@ -42,6 +52,11 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Timeout settings for long-running operations
+            proxy_connect_timeout 30s;
+            proxy_send_timeout 1800s;  # 30 minutes
+            proxy_read_timeout 1800s;  # 30 minutes
         }
 
         # Auth routes with stricter rate limiting
