--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,10 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.13",
+    "@tailwindcss/vite": "^4.1.13",
     "@vueuse/core": "^10.7.0",
     "axios": "^1.6.2",
-    "bootstrap": "^5.3.2",
-    "bootstrap-vue-next": "^0.15.0",
     "pdfjs-dist": "^5.4.149",
     "pinia": "^2.1.7",
     "vue": "^3.4.0",
@@ -26,9 +26,12 @@
     "@vitejs/plugin-vue": "^4.5.2",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.5.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.56.0",
     "eslint-plugin-vue": "^9.19.2",
+    "postcss": "^8.5.6",
     "sass": "^1.69.5",
+    "tailwindcss": "^4.1.13",
     "typescript": "~5.3.0",
     "vite": "^5.0.10",
     "vue-tsc": "^1.8.25"
