--- a/backend/package.json
+++ b/backend/package.json
@@ -63,6 +63,7 @@
     "prisma": "^5.7.1",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
+    "tsx": "^4.6.2",
     "typescript": "^5.3.3"
   },
   "engines": {
