--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -124,6 +124,38 @@ services:
       timeout: 10s
       retries: 3
 
+  # pgAdmin 4 - Database Management Tool
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    container_name: etally-pgadmin
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@etally.com
+      PGADMIN_DEFAULT_PASSWORD: admin123
+      PGADMIN_CONFIG_SERVER_MODE: 'False'
+      PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED: 'False'
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+    ports:
+      - '5050:80'
+    networks:
+      - etally-network
+    depends_on:
+      - postgres
+    restart: unless-stopped
+    healthcheck:
+      test:
+        [
+          'CMD',
+          'wget',
+          '--quiet',
+          '--tries=1',
+          '--spider',
+          'http://localhost/misc/ping',
+        ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
   # Nginx Reverse Proxy
   nginx:
     image: nginx:alpine
@@ -146,6 +178,7 @@ services:
 volumes:
   postgres_data:
   redis_data:
+  pgadmin_data:
 
 networks:
   etally-network:
